cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/multi_initial_locs.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/multi_initial_locs.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  -----------------------------------------------
  (1/1) Automaton has multiple initial locations.
  -----------------------------------------------
   * In the top-level scope of the specification:
     - plant automaton x:
                       ^
